fixed state instance horizontal scrolling

--- a/app/static/style/campgroundInstance.css
+++ b/app/static/style/campgroundInstance.css
@@ -9,7 +9,6 @@ html, body {
   	padding: 0;
   	margin: auto;
   	overflow: auto;
-  	background-image: url("https://github.com/kethomas/SWEetOutdoors-dev/blob/master/app/static/img/flag.jpg?raw=true");
  
  }   
 
