--- a/app/static/style/stateInstance.css
+++ b/app/static/style/stateInstance.css
@@ -9,10 +9,18 @@ html, body {
   	padding: 0;
   	margin: auto;
   	overflow: auto;
-  	background-image: url("https://github.com/kethomas/SWEetOutdoors-dev/blob/master/app/static/img/flag.jpg?raw=true");
  
  }   
 
+.row{
+	margin-right: 0;
+	margin-left: 0;
+}
+
+body{
+	background-image: url("https://github.com/kethomas/SWEetOutdoors-dev/blob/master/app/static/img/flag.jpg?raw=true");
+
+}
 #details{
 	height: 100%;
 	margin-right: auto;
